# DragCapture

./: Cargo.toml  README.md
config/: hotkeys  hotkeys.txt
src/: hotkey_personal_lib.rs  imageprocessing_personal_lib.rs  main.rs
