[package]
name = "DragCapture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
screenshots = "0.7.0"
hotkey = "0.3.1"
serde = { version = "1.0.178", features = ["derive"]}
epaint = "0.22.0"
egui_glium = "0.20.1"
eframe = "0.22.0"