[package]
name = "DragCapture"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image="*"
arboard="*"
screenshots = "0.7.0"
hotkey = "0.3.1"
imageproc = "0.23.0"
rusttype="*"
serde = { version = "1.0.178", features = ["derive"]}
epaint = "0.22.0"
egui-winit = "0.22.0"
egui_extras = "0.22.0"
eframe = "0.22.0"
dirs = "5.0.1"
chrono = "0.4.26"
global-hotkey = "0.2.3"

